# Inertial-Measurement-Unit

./: CMakeLists.txt  README.md  main.cpp
RaspPi_BL/: CMakeLists.txt  ReadMe.md
RaspPi_BL/src/: main.cpp
Rasp_Pi_BL/ChickenPi/: README.md
RaspbPi_Upload/: CMakeLists.txt  ReadMe.md
RaspbPi_Upload/src/: main.cpp
Website/: Readme.md  app.py
Website/templates/: all.html  athlete.html  complete.html  health.html  health_card.html  index.html  motion_intensity.html
src/: main.cpp
src/drivers/: BloodOxygen_S_Pico.cpp  BloodOxygen_S_Pico.h  dht11-pico.cpp  dht11-pico.h  mpu6500.cpp  mpu6500.h  uart.cpp  uart.h
