cmake_minimum_required(VERSION 3.12)
project(BL_RaspPi)
set(CMAKE_CXX_STANDARD 20)
set(COMPILE_DEFINITIONS -O2 -Wall)
find_package(OpenCV REQUIRED)
add_executable(BL_RaspPi src/main.cpp)
target_link_libraries(BL_RaspPi ${OpenCV_LIBS})
find_package(CURL REQUIRED)
target_link_libraries(BL_RaspPi ${CURL_LIBRARIES})